pregame menu is complete expect leader assets